force-app/main/default/objects/SalesforceCommTracking__x/SalesforceCommTracking__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceCommTracking</externalName>
    <label>Comunicazione Migrata da Siebel a SFDC</label>
    <pluralLabel>Comunicazioni Migrate da Siebel a SFDC</pluralLabel>
</CustomObject>