force-app/main/default/objects/SalesforceCommTracking__x/fields/AccountC__c.field-meta.xml
<CustomField>
    <fullName>AccountC__c</fullName>
    <description>AccountC</description>
    <externalDeveloperName>AccountC</externalDeveloperName>
    <label>Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>