force-app/main/default/objects/SalesforceCommTracking__x/fields/ContactC__c.field-meta.xml
<CustomField>
    <fullName>ContactC__c</fullName>
    <description>ContactC</description>
    <externalDeveloperName>ContactC</externalDeveloperName>
    <label>Contatto</label>
    <length>255</length>
    <referenceTo>SalesforceContact__x</referenceTo>
    <relationshipLabel>Comunicazioni Migrate da Siebel a SFDC</relationshipLabel>
    <relationshipName>ComunicazioniMigrateDaSiebelASFDC</relationshipName>
    <type>ExternalLookup</type>
</CustomField>