force-app/main/default/objects/SalesforceCommTracking__x/fields/IsReadC__c.field-meta.xml
<CustomField>
    <fullName>IsReadC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsReadC</description>
    <externalDeveloperName>IsReadC</externalDeveloperName>
    <label>Notifica Letta</label>
    <type>Checkbox</type>
</CustomField>