force-app/main/default/objects/SalesforceCommTracking__x/fields/SendEffectiveDateC__c.field-meta.xml
<CustomField>
    <fullName>SendEffectiveDateC__c</fullName>
    <description>SendEffectiveDateC</description>
    <externalDeveloperName>SendEffectiveDateC</externalDeveloperName>
    <label>Data effettiva invio</label>
    <type>DateTime</type>
</CustomField>