force-app/main/default/objects/SalesforceCommTracking__x/fields/StateLegacyC__c.field-meta.xml
<CustomField>
    <fullName>StateLegacyC__c</fullName>
    <description>StateLegacyC</description>
    <externalDeveloperName>StateLegacyC</externalDeveloperName>
    <label>Stato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>