force-app/main/default/objects/SalesforceCommTracking__x/fields/TypeC__c.field-meta.xml
<CustomField>
    <fullName>TypeC__c</fullName>
    <description>TypeC</description>
    <externalDeveloperName>TypeC</externalDeveloperName>
    <label>Tipo Notifica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>